force-app/main/default/objects/X3_Inventory_Transaction_Header__c/X3_Inventory_Transaction_Header__c.object-meta.xml
<CustomObject>
    <label>Inventory Transaction Header</label>
    <nameField>
        <label>Inventory Transaction Header Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventory Transaction Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>