force-app/main/default/objects/X3_Inventory_Transaction_Header__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Supplier</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Inventory Transaction Headers</relationshipLabel>
    <relationshipName>Inventory_Transaction_Headers</relationshipName>
    <type>Lookup</type>
</CustomField>