force-app/main/default/objects/X3_Inventory_Transaction_Header__c/fields/Contract_No__c.field-meta.xml
<CustomField>
    <fullName>Contract_No__c</fullName>
    <label>Contract No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>