force-app/main/default/objects/X3_Inventory_Transaction_Header__c/fields/From_Warehouse_Location__c.field-meta.xml
<CustomField>
    <fullName>From_Warehouse_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From Warehouse Location</label>
    <referenceTo>Warehouse_Location__c</referenceTo>
    <relationshipLabel>Inventory Transaction Headers</relationshipLabel>
    <relationshipName>Inventory_Transaction_Headers</relationshipName>
    <type>Lookup</type>
</CustomField>