force-app/main/default/objects/X3_Inventory_Transaction_Header__c/fields/From_Warehouse_Location_Account__c.field-meta.xml
<CustomField>
    <fullName>From_Warehouse_Location_Account__c</fullName>
    <formula>CASESAFEID( From_Warehouse_Location__r.Account__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>From Warehouse Location Account</label>
    <type>Text</type>
</CustomField>