force-app/main/default/objects/X3_Inventory_Transaction_Header__c/fields/Header_No__c.field-meta.xml
<CustomField>
    <fullName>Header_No__c</fullName>
    <label>Header No</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>