force-app/main/default/objects/X3_Inventory_Transaction_Header__c/fields/Header_Number__c.field-meta.xml
<CustomField>
    <fullName>Header_Number__c</fullName>
    <label>Header Number</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>