force-app/main/default/objects/X3_Inventory_Transaction_Header__c/fields/Header_Type__c.field-meta.xml
<CustomField>
    <fullName>Header_Type__c</fullName>
    <formula>IF(  NOT(ISBLANK(From_Warehouse_Location__c )) &amp;&amp; NOT(ISBLANK(To_Warehouse_Location__c ) ) , &apos;Transfer&apos;,  IF(NOT(ISBLANK(From_Warehouse_Location__c )), &apos;Output&apos;, &apos;Input&apos;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Header Type</label>
    <type>Text</type>
</CustomField>