force-app/main/default/objects/X3_Inventory_Transaction_Header__c/fields/Inventory_Transaction_Item__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Transaction_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory Transaction Item</label>
    <referenceTo>Inventory_Transaction_Item__c</referenceTo>
    <relationshipLabel>Inventory Transaction Headers</relationshipLabel>
    <relationshipName>Inventory_Transaction_Headers</relationshipName>
    <type>Lookup</type>
</CustomField>