force-app/main/default/objects/X3_Inventory_Transaction_Header__c/fields/Is_Booked_Asset__c.field-meta.xml
<CustomField>
    <fullName>Is_Booked_Asset__c</fullName>
    <formula>Order_Reserved__r.Is_Booked_Asset__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Booked Asset</label>
    <type>Checkbox</type>
</CustomField>