force-app/main/default/objects/X3_Inventory_Transaction_Header__c/fields/Is_DMS__c.field-meta.xml
<CustomField>
    <fullName>Is_DMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is DMS</label>
    <type>Checkbox</type>
</CustomField>