force-app/main/default/objects/X3_Inventory_Transaction_Header__c/fields/Opportunity_Reserved__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Reserved__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Reserved</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Inventory Transaction Headers</relationshipLabel>
    <relationshipName>Inventory_Transaction_Headers</relationshipName>
    <type>Lookup</type>
</CustomField>