force-app/main/default/objects/X3_Inventory_Transaction_Header__c/fields/Order_Reserved__c.field-meta.xml
<CustomField>
    <fullName>Order_Reserved__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Reserved</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Inventory Transaction Headers</relationshipLabel>
    <relationshipName>Inventory_Transaction_Headers</relationshipName>
    <type>Lookup</type>
</CustomField>