force-app/main/default/objects/X3_Inventory_Transaction_Header__c/fields/Order_Reserved_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Reserved_Number__c</fullName>
    <formula>Order_Reserved__r.Order_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Reserved Number</label>
    <type>Text</type>
</CustomField>