force-app/main/default/objects/X3_Inventory_Transaction_Header__c/fields/Profomar_Order__c.field-meta.xml
<CustomField>
    <fullName>Profomar_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Profomar Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Inventory Transaction Headers (Profomar Order)</relationshipLabel>
    <relationshipName>Inventory_Transaction_Headers1</relationshipName>
    <type>Lookup</type>
</CustomField>