force-app/main/default/objects/X3_Inventory_Transaction_Header__c/fields/Stock_In__c.field-meta.xml
<CustomField>
    <fullName>Stock_In__c</fullName>
    <label>Stock Date</label>
    <type>Date</type>
</CustomField>