force-app/main/default/objects/X3_Inventory_Transaction_Header__c/fields/Stock_Out__c.field-meta.xml
<CustomField>
    <fullName>Stock_Out__c</fullName>
    <label>Stock Out</label>
    <type>Date</type>
</CustomField>