force-app/main/default/objects/X3_Inventory_Transaction_Header__c/fields/StockDate__c.field-meta.xml
<CustomField>
    <fullName>StockDate__c</fullName>
    <formula>IF( ISBLANK( Stock_In__c ) ,  DATEVALUE (CreatedDate) , Stock_In__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>StockDate</label>
    <type>Date</type>
</CustomField>