force-app/main/default/objects/X3_Inventory_Transaction_Header__c/fields/To_Warehouse_Location_Account__c.field-meta.xml
<CustomField>
    <fullName>To_Warehouse_Location_Account__c</fullName>
    <formula>CASESAFEID( To_Warehouse_Location__r.Account__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>To Warehouse Location Account</label>
    <type>Text</type>
</CustomField>