force-app/main/default/objects/X3_Inventory_Transaction_Header__c/validationRules/Store_Man_Dont_Edit_When_Completed.validationRule-meta.xml
<ValidationRule>
    <fullName>Store_Man_Dont_Edit_When_Completed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISNEW()),
ISCHANGED(Status__c),
ISPICKVAL( PRIORVALUE(Status__c),&quot;Completed&quot;),
 $Profile.Name == &apos;Community Warehouse&apos;
)</errorConditionFormula>
    <errorMessage>You can not edit when it was completed.</errorMessage>
</ValidationRule>