force-app/main/default/objects/X3_Inventory_Transaction_Header__c/listViews/Inventory_Transaction_Headers_Stock_in.listView-meta.xml
<ListView>
    <fullName>Inventory_Transaction_Headers_Stock_in</fullName>
    <columns>CREATEDBY_USER</columns>
    <columns>NAME</columns>
    <columns>Stock_In__c</columns>
    <columns>StockDate__c</columns>
    <columns>Status__c</columns>
    <columns>From_Warehouse_Location__c</columns>
    <columns>To_Warehouse_Location__c</columns>
    <columns>Comment_Message__c</columns>
    <columns>Header_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>From_Warehouse_Location__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>To_Warehouse_Location__c</field>
        <operation>equals</operation>
        <value>Revzone SaiGon Bike&amp;PCA,Revzone Wholesale PCA</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>notEqual</operation>
        <value>Sales Admin</value>
    </filters>
    <label>Inventory Transaction Header SG_Stock in</label>
    <sharedTo>
        <group>Storeman_HCM</group>
    </sharedTo>
</ListView>