force-app/main/default/objects/X3_Inventory_Transaction_Header__c/listViews/Transaction_Headers_to_PCA_event.listView-meta.xml
<ListView>
    <fullName>Transaction_Headers_to_PCA_event</fullName>
    <columns>CREATEDBY_USER</columns>
    <columns>NAME</columns>
    <columns>StockDate__c</columns>
    <columns>Status__c</columns>
    <columns>From_Warehouse_Location__c</columns>
    <columns>To_Warehouse_Location__c</columns>
    <columns>Comment_Message__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>To_Warehouse_Location__c</field>
        <operation>equals</operation>
        <value>Revzone Logistic PCA</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed,Cancled</value>
    </filters>
    <label>SG &amp; HN - PCA Logistic - on the way</label>
    <sharedTo>
        <group>PCA_DO_HCM</group>
        <group>PCA_DO_HN</group>
    </sharedTo>
</ListView>